crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@281.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[\"abc\", \"abcabc\", null, 1]', 'strict $ ? ((@[*] starts with \"abc\") is unknown)');"
---
SelectStmt@0..106
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..104
    FuncCall@7..104
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[\"abc\", \"abcabc\", nu ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..104
        Sconst@54..104 "'strict $ ? ((@[*] st ..."
  Ascii41@104..105 ")"
  Ascii59@105..106 ";"

