crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@282.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[[null, 1, \"abc\", \"abcabc\"]]', 'lax $ ? (@[*] starts with \"abc\")');"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..90
    FuncCall@7..90
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..54
        Sconst@24..54 "'[[null, 1, \"abc\", \"a ..."
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      AConst@56..90
        Sconst@56..90 "'lax $ ? (@[*] starts ..."
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

