crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@283.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[[null, 1, \"abd\", \"abdabc\"]]', 'lax $ ? ((@[*] starts with \"abc\") is unknown)');"
---
SelectStmt@0..105
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..103
    FuncCall@7..103
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..54
        Sconst@24..54 "'[[null, 1, \"abd\", \"a ..."
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      AConst@56..103
        Sconst@56..103 "'lax $ ? ((@[*] start ..."
  Ascii41@103..104 ")"
  Ascii59@104..105 ";"

