crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@284.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"abd\", \"abdabc\"]', 'lax $[*] ? ((@ starts with \"abc\") is unknown)');"
---
SelectStmt@0..103
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..101
    FuncCall@7..101
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..52
        Sconst@24..52 "'[null, 1, \"abd\", \"ab ..."
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..101
        Sconst@54..101 "'lax $[*] ? ((@ start ..."
  Ascii41@101..102 ")"
  Ascii59@102..103 ";"

