crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@285.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"abc\", \"abd\", \"aBdC\", \"abdacb\", \"babc\", \"adc\\nabc\", \"ab\\nadc\"]', 'lax $[*] ? (@ like_regex \"^ab.*c\")');"
---
SelectStmt@0..138
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..136
    FuncCall@7..136
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..98
        Sconst@24..98 "'[null, 1, \"abc\", \"ab ..."
      Ascii44@98..99 ","
      Whitespace@99..100 " "
      AConst@100..136
        Sconst@100..136 "'lax $[*] ? (@ like_r ..."
  Ascii41@136..137 ")"
  Ascii59@137..138 ";"

