crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@289.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[null, 1, \"a\\b\", \"a\\\\b\", \"^a\\\\b$\"]', 'lax $[*] ? (@ like_regex \"a\\\\b\" flag \"q\")');"
---
SelectStmt@0..107
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..105
    FuncCall@7..105
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..60
        Sconst@24..60 "'[null, 1, \"a\\b\", \"a\\ ..."
      Ascii44@60..61 ","
      Whitespace@61..62 " "
      AConst@62..105
        Sconst@62..105 "'lax $[*] ? (@ like_r ..."
  Ascii41@105..106 ")"
  Ascii59@106..107 ";"

